--- a/src/CarRentalSystem.Admin/Views/Statistics/Index.cshtml
+++ b/src/CarRentalSystem.Admin/Views/Statistics/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model CarRentalSystem.Admin.Models.StatisticsOutputModel
+
+<div class="jumbotron mt-5">
+    <h1 class="display-4 text-center">@Model.TotalCarAds Car Ads | @Model.TotalRentedCars Rented Cars</h1>
+</div>
