visualize in table all dealers

--- a/src/CarRentalSystem.Admin/Views/Shared/_Layout.cshtml
+++ b/src/CarRentalSystem.Admin/Views/Shared/_Layout.cshtml
@@ -17,7 +17,8 @@
                 {
                     <a class="navbar-brand" asp-area="" asp-controller="Statistics" asp-action="Index">
                         Car Rental System Administration
-                    </a>                   
+                    </a>
+                    <a asp-area="" asp-controller="Dealers" asp-action="Index">Dealers</a>
                     <a class="float-right" asp-area="" asp-controller="Identity" asp-action="Logout">Logout</a>
                 }
                 else
