administrator can edit dealer details

--- a/src/CarRentalSystem.Admin/Views/Dealers/Index.cshtml
+++ b/src/CarRentalSystem.Admin/Views/Dealers/Index.cshtml
@@ -1,4 +1,12 @@
-﻿@model IEnumerable<CarRentalSystem.Admin.Models.DealerDetailsOutputModel>
+﻿@model IEnumerable<CarRentalSystem.Admin.Models.Dealers.DealerDetailsOutputModel>
+
+@{ ViewData["Title"] = "All Dealers"; }
+
+<div class="row">
+    <div class="col-lg-4">
+        <h2>All Dealers</h2>
+    </div>
+</div>
 
 <table class="table table-striped table-bordered">
     <thead>
@@ -6,15 +14,27 @@
             <th scope="col">Name</th>
             <th scope="col">Phone number</th>
             <th scope="col">Total car ads</th>
+            <th scope="col"></th>
         </tr>
     </thead>
     <tbody>
-        @foreach(var dealer in Model)
+        @foreach (var dealer in Model)
         {
             <tr>
-                <th>@dealer.Name</th>
-                <th>@dealer.PhoneNumber</th>
-                <th>@dealer.TotalCarAds</th>
+                <td>@dealer.Name</td>
+                <td>@dealer.PhoneNumber</td>
+                <td>@dealer.TotalCarAds</td>
+                <td>
+                    <a
+                       asp-area=""
+                       asp-controller="Dealers"
+                       asp-action="Edit"
+                       asp-route-id="@dealer.Id"
+                       class="btn btn-warning"
+                    >
+                        Edit
+                    </a>
+                </td>
             </tr>
         }
     </tbody>
