--- a/src/CarRentalSystem.Admin/Views/Home/Index.cshtml
+++ b/src/CarRentalSystem.Admin/Views/Home/Index.cshtml
@@ -1,8 +1,6 @@
 ﻿@model CarRentalSystem.Admin.Models.Identity.LoginFormModel
 
-@{
-    ViewData["Title"] = "Home Page";
-}
+@{ ViewData["Title"] = "Home Page"; }
 
 <div class="row">
     <div class="col-lg-4 offset-lg-4">
